--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
 		<li><a href="https://www.facebook.com/profile.php?id=61557087267959"><ion-icon name="logo-facebook"></ion-icon></a></li>
 		<li><a href="https://www.instagram.com/goldenvision_agency/"><ion-icon name="logo-instagram"></ion-icon></a></li>
 		<li><a href="https://wa.me/96176030413"><ion-icon name="logo-whatsapp"></ion-icon></a></li>
-		<li><a href="mailto:GoldenVision@qualityservic.com"><ion-icon class="fa fa-envelope"></ion-icon></a></li>
+		<li><a href="mailto:GoldenVision@qualityservice.com"><ion-icon class="fa fa-envelope"></ion-icon></a></li>
 
 	</ul>
 	
